--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 <body>
     <h1 id="titulo">Aula de Javascript</h1>
     <p id="texto">Vamos estudar javascript.</p>
+    <button type="button" onclick="Rosa()">Rosa</button>
+    <button type="button" onclick="Laranja()">Laranja</button>
 
     <script src="app.js"></script>
 </body>
